--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">FullStackApp</string>
     <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
+    <string name="send_data">Send data</string>
+    <string name="phone_number">phone number</string>
+    <string name="realtime_database">Realtime Database</string>
+    <string name="cloud_fire_store">Cloud Fire Store</string>
+    <string name="name">name</string>
+    <string name="phone">phone</string>
+    <string name="id">id</string>
+    <string name="view_data">View Data</string>
+    <string name="data_you_saved">Data You Saved</string>
 </resources>
